# mega-rag

./: README.md  main.py  requirements.txt
docker/: docker-compose.yml
routes/: base.py
src/: .env.example  main.py  pyproject.toml  requirements.txt
src/controllers/: BaseController.py  DataController.py  ProcessController.py  ProjectController.py
src/models/: AssetModel.py  BaseDataModel.py  ChunkModel.py  ProjectModel.py  __init__.py
src/models/db_schemes/: assets.py  data_chunk.py  project.py
src/models/enums/: AssetTypeEnums.py  ProcessEnums.py  ResponseEnums.py
src/routes/: base.py  data.py
src/routes/schemes/: data.py
src/utils/: config.py
